<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">Google Authenticator</string>
  <string name="app_name_short">Authenticator</string>
  <string name="enter_key_title">Enter account details</string>
  <string name="enter_key_page_add_button">Add</string>
  <string name="how_it_works_menu_item">How it works</string>
  <string name="main_preference_screen_title">Settings</string>
  <string name="settings_menu_item">Settings</string>
  <string name="about_preference_title">About</string>
  <string name="help_and_feedback_menu_item">Help &amp; feedback</string>
  <string name="switch_ui_mode_light">View in light mode</string>
  <string name="switch_ui_mode_dark">View in dark mode</string>
  <string name="button_next">Next</string>
  <string name="button_back">Back</string>
  <string name="enter_account_label">Account name</string>
  <string name="enter_key_hint">Your key</string>
  <string name="enter_key_too_short">Key value is too short</string>
  <string name="enter_key_illegal_char">Key value has illegal character</string>
  <string name="error_title">Error</string>
  <string name="error_uri">Key not recognized.</string>
  <string name="error_qr">Cannot interpret QR code.</string>
  <string name="error_invalid_device">
    Cannot add account. Please contact the TechStop for assistance.
  </string>
  <string name="secret_saved">Secret saved</string>
  <string name="save_key_message">Save key for</string>
  <string name="error_empty_secret">Cannot save empty secret</string>
  <string name="enter_pin">
    Enter this verification code when asked during sign-in
  </string>
  <string name="check_code_title">Integrity check value</string>
  <string name="check_code_menu_item">Check key value</string>
  <string name="update_button">UPDATE</string>
  <string name="not_update_button">NO THANKS</string>
  <string name="about_preference_screen_title">About</string>
  <string name="version_preference_title">Version</string>
  <string name="opensource_licenses_preference_title">Open-source licenses</string>
  <string name="terms_preference_title">Terms of service</string>
  <string name="terms_page_url" translatable="false">http://www.google.com/policies/terms/</string>
  <string name="privacy_preference_title">Privacy policy</string>
  <string name="privacy_page_url" translatable="false">http://www.google.com/policies/privacy/</string>
  <string name="check_code">
  To check that you have the correct key value for <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>
  verify that the value here matches the integrity check value provided
  by the server:&lt;br/>
  </string>
  <string name="general_security_exception">General security exception</string>
  <string name="decoding_exception">Decoding exception</string>
  <string name="submit">Save</string>
  <string name="cancel">Cancel</string>
  <string name="context_menu_remove_account">Remove</string>
  <string name="remove_account_dialog_button_remove">Remove account</string>
  <string name="remove_account_dialog_title">
    Remove <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>?
  </string>
  <string name="remove_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-factor authentication. This may prevent you from signing into your
      account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-factor authentication for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>
  <string name="remove_google_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-step verification. This may prevent you from signing into your account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-step verification for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>
  <string name="rename">Rename</string>
  <string name="error_exists">Sorry, that name is already in use.</string>
  <string name="copy_to_clipboard">Copy to clipboard</string>
  <string name="copied_to_clipboard_toast">Verification code copied to clipboard.</string>
  <string name="clipboard_label">OTP Code</string>
  <string name="counter_pin">Get code</string>
  <string name="empty_pin">_ _ _ _ _ _</string>
  <string name="ok">OK</string>
  <string name="close">CLOSE</string>
  <string name="type_prompt">Type of key</string>
  <string-array name="type">
    <item>Time based</item>
    <item>Counter based</item>
  </string-array>
  <string name="howitworks_page_title">How it works</string>
  <string name="howitworks_page_button_skip">Skip</string>
  <string name="howitworks_page_button_next">Next</string>
  <string name="howitworks_page_button_done">Done</string>
  <string name="howitworks_page_layout_1_title">
    Signing in to Google
  </string>
  <string name="howitworks_page_layout_1_description_1">
    Whenever you sign in to Google, you\'ll enter your username and password as usual.
  </string>
  <string name="howitworks_page_layout_1_description_2">
    When you\'re asked for a code you\'ll be able to get one from this app.
  </string>
  <string name="howitworks_page_layout_2_title">
    Stay safe &amp; in control
  </string>
  <string name="howitworks_page_layout_2_description_1">
    When you sign in with a device you trust, you can tell us to stop asking for codes on that
      device.
  </string>
  <string name="howitworks_page_layout_2_description_2">
    You\'ll still be covered because we\'ll ask for codes
      when you (or anyone else) tries to sign in to your account from other devices
  </string>
  <string name="howitworks_page_layout_3_title">
    Ready to add account?
  </string>
  <string name="howitworks_page_layout_3_description">
    Remember, you can update your settings any time at g.co/2sv
  </string>
  <string name="howitworks_page_layout_3_description_option_1">
    Update your phone numbers
  </string>
  <string name="howitworks_page_layout_3_description_option_2">
    Create other backup options
  </string>
  <string name="howitworks_page_layout_3_description_option_3">
    Turn off 2-Step Verification
  </string>
  <string name="account_list_page_first_account_message_header">
    Account added
  </string>
  <string name="account_list_page_first_account_message_detail">
    When you\'re asked for a verification code, get it here.
    The code changes frequently, so no need to memorize it.
  </string>
  <string name="account_list_page_first_account_button_done">Add account</string>
  <string name="welcome_page_details">
    After you turn on 2-Step Verification for your Google Account (or other accounts), you’ll need
  </string>
  <string name="welcome_page_details_list_entry1">Your password</string>
  <string name="welcome_page_details_list_entry2">
    A code this app will generate for you
  </string>
  <string name="accounts_reorder_failed">
    Failed to reorder accounts. Please try again later.
  </string>
  <string name="permission_camera_rationale">
    To scan barcodes, we need the camera permission.
  </string>
  <string name="no_camera_permission">
    Let Authenticator use your device\'s camera if you want to scan barcodes
  </string>
  <string name="low_storage_error_title">
    Not enough space on your device
  </string>
  <string name="low_storage_error_detail">
    You\'ll need to delete some files before you can use the barcode scanner
  </string>
  <string name="barcode_scanner_not_available">
    Barcode scanner is not available now
  </string>
  <string name="camera_not_found_on_device_title">
    Your device doesn\'t have a camera
  </string>
  <string name="camera_not_found_on_device_detail">
    Authenticator needs a camera to scan barcodes
  </string>
  <string name="barcode_instruction_text">
    Place barcode within red lines
  </string>
  <string name="update_google_play_services">
    <![CDATA[
      Update <b>Google Play Services</b> to use the barcode scanner
    ]]>
  </string>
  <string name="update_google_play_services_for_security_key">
    <![CDATA[
      Update <b>Google Play Services</b> to use Security Key
    ]]>
  </string>
</resources>