<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2019 Google LLC
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/content_no_accounts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/google_blue500"
             android:orientation="vertical">
  <ScrollView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="@dimen/nav_panel_height">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingBottom="24dp"
                  android:paddingLeft="24dp"
                  android:paddingRight="24dp"
                  android:orientation="vertical">
      <ImageView android:layout_width="148dp"
                 android:layout_height="148dp"
                 android:layout_marginTop="72dp"
                 android:layout_marginBottom="48dp"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true"
                 android:src="@drawable/product_logo_authenticator_color_144"/>
      <TextView android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="8dp"
                android:text="@string/welcome_page_details"
                android:textColor="#fff"
                android:textSize="14sp"/>
      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
        <ImageView android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_gravity="center_vertical"
                   android:adjustViewBounds="true"
                   android:src="@drawable/quantum_ic_vpn_key_white_24"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="24dp"
                  android:layout_marginLeft="24dp"
                  android:layout_gravity="center_vertical"
                  android:fontFamily="sans-serif"
                  android:lineSpacingExtra="8dp"
                  android:text="@string/welcome_page_details_list_entry1"
                  android:textColor="#fff"
                  android:textSize="14sp"/>
      </LinearLayout>
      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">
        <ImageView android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_gravity="center_vertical"
                   android:adjustViewBounds="true"
                   android:src="@drawable/quantum_ic_lock_white_24"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="24dp"
                  android:layout_marginLeft="24dp"
                  android:layout_gravity="center_vertical"
                  android:fontFamily="sans-serif"
                  android:lineSpacingExtra="8dp"
                  android:text="@string/welcome_page_details_list_entry2"
                  android:textColor="#fff"
                  android:textSize="14sp"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <FrameLayout android:layout_width="match_parent"
               android:layout_height="@dimen/nav_panel_height"
               android:layout_gravity="bottom">
    <Button android:id="@+id/add_account_button"
            style="@style/ButtonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp"
            android:minWidth="96dp"
            android:text="@string/button_begin_setup"/>
  </FrameLayout>
  <View android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/nav_panel_height"
        android:layout_gravity="bottom"
        android:background="#33ffffff"/>
</FrameLayout>
